--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,23 @@
-CMakeLists.txt.user
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
-_deps
+.out/
+cmake-build-*/
+
+export.cfg
+export_presets.cfg
+.sconsign.dblite
+
+*.translation
+*.obj
+
+**/bin/*
+!**/bin/*.gdextension
+
+.vs/**
+!.vs/launch.vs.json
+!.vs/VSWorkspaceSettings.json
+!.vs/CMakeWorkspaceSettings.json
+
+.vscode/**
+!.vscode/c_cpp_properties.json
+!.vscode/extensions.json
+!.vscode/launch.json
+!.vscode/settings.json
