added entityx submodule, added display raylib wrapper class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,13 +50,15 @@ target_compile_definitions(raylib_dummy PUBLIC
   PLATFORM_DESKTOP
 )
 
-set(raylib_VERBOSE 1)
-find_package(raylib CONFIG REQUIRED)
+set(raylib_VERBOSE TRUE)
 find_package(argparse CONFIG REQUIRED)
-find_package(flecs CONFIG REQUIRED)
-find_package(EnTT CONFIG REQUIRED)
+find_package(simdjson CONFIG REQUIRED)
+find_package(raylib CONFIG REQUIRED)
 find_package(fmt CONFIG REQUIRED)
-find_package(nlohmann_json CONFIG REQUIRED)
+
+set(ENTITYX_BUILD_SHARED FALSE)
+set(ENTITYX_BUILD_TESTING FALSE)
+add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/extern/entityx")
 
 file(GLOB_RECURSE
   roguelike_sources
@@ -106,11 +108,11 @@ target_include_directories(${PROJECT_NAME}
 )
 
 target_link_libraries(${PROJECT_NAME}
-  PRIVATE raylib
-  PRIVATE EnTT::EnTT
-  PRIVATE $<IF:$<TARGET_EXISTS:flecs::flecs>,flecs::flecs,flecs::flecs_static>
-  PRIVATE nlohmann_json::nlohmann_json
+  PRIVATE argparse::argparse
+  PRIVATE simdjson::simdjson
   PRIVATE fmt::fmt
+  PRIVATE raylib
+  PRIVATE entityx
   PRIVATE winmm
 )
 
