--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -20,9 +20,9 @@ jobs:
           -S ${{ github.workspace }}
           -G Ninja
       - name: '[linux | gcc] => cmake - clean'
-        run: cmake --build ${{ github.workspace }}/.out --preset gcc-debug --target clean --parallel 48
+        run: cmake --build ${{ github.workspace }}/.out --config Debug --target clean --parallel 48
       - name: '[linux | gcc] => cmake - build'
-        run: cmake --build ${{ github.workspace }}/.out --preset gcc-debug --target roguelike --parallel 48
+        run: cmake --build ${{ github.workspace }}/.out --config Debug --target roguelike --parallel 48
 
         # linux / clang build
       - name: '[linux | clang] => cmake - delete cache'
@@ -36,6 +36,6 @@ jobs:
           -S ${{ github.workspace }}
           -G Ninja
       - name: '[linux | clang] => cmake - clean'
-        run: cmake --build ${{ github.workspace }}/.out --preset clang-debug --target clean --parallel 48
+        run: cmake --build ${{ github.workspace }}/.out --config Debug --target clean --parallel 48
       - name: '[linux | clang] => cmake - build'
-        run: cmake --build ${{ github.workspace }}/.out --preset clang-debug --target roguelike --parallel 48
+        run: cmake --build ${{ github.workspace }}/.out --config Debug --target roguelike --parallel 48
