--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -11,18 +11,8 @@ jobs:
         # linux / gcc build
       - name: '[linux | gcc] => cmake - delete cache'
         run: rm -rf ${{ github.workspace }}/.out/*
-      - name: '[linux | gcc] => cmake - configure'
-        run: >
-          cmake -B ${{ github.workspace }}/.out
-          -DCMAKE_CXX_COMPILER=g++
-          -DCMAKE_C_COMPILER=gcc
-          -DCMAKE_BUILD_TYPE=Debug
-          -S ${{ github.workspace }}
-          -G Ninja
-      - name: '[linux | gcc] => cmake - clean'
-        run: cmake --build ${{ github.workspace }}/.out --config Debug --target clean --parallel 48
       - name: '[linux | gcc] => cmake - build'
-        run: cmake --build ${{ github.workspace }}/.out --config Debug --target roguelike --parallel 48
+        run: cmake --build ${{ github.workspace }}/.out --preset gcc-debug --target roguelike --parallel 48
 
         # linux / clang build
       - name: '[linux | clang] => cmake - delete cache'
