experimenting with upside-down inheritance for gui framework. it works, but needs refinement and cleanup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,24 @@
 {
     "C_Cpp.autoAddFileAssociations": false,
-    "C_Cpp.autocomplete": "default",
-    "C_Cpp.clang_format_fallbackStyle": "none",
     "C_Cpp.clang_format_style": "file",
+    "C_Cpp.clang_format_fallbackStyle": "none",
     "C_Cpp.codeAnalysis.runAutomatically": true,
     "C_Cpp.commentContinuationPatterns": [
         "/**",
         "///"
     ],
-    "C_Cpp.default.compilerPath": "",
-    "C_Cpp.default.cppStandard": "c++23",
     "C_Cpp.default.enableConfigurationSquiggles": true,
     "C_Cpp.enhancedColorization": "enabled",
     "C_Cpp.formatting": "clangFormat",
+    "C_Cpp.autocompleteAddParentheses": false,
+    "editor.formatOnPaste": false,
+    "editor.formatOnType": false,
     "clang-format.language.cpp.enable": true,
     "clang-format.language.cpp.style": "file",
     "clang-format.assumeFilename": ".clangformat",
+    "cppref.lang": "en",
+    "cppref.invertColorInDarkTheme": true,
+    "cppref.searchEngine": "Google",
     "C_Cpp.workspaceParsingPriority": "high",
     "cmake.automaticReconfigure": true,
     "cmake.buildBeforeRun": true,
