--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ find_package(flecs CONFIG REQUIRED)
 find_package(fmt CONFIG REQUIRED)
 find_package(glfw3 CONFIG REQUIRED)
 find_package(raylib CONFIG REQUIRED)
+find_package(imgui CONFIG REQUIRED)
 find_package(simdjson CONFIG REQUIRED)
 find_package(Vulkan REQUIRED)
 
@@ -78,13 +79,10 @@ include(compiler-warnings)
 target_compile_features(${PROJECT_NAME} PRIVATE
   PRIVATE
     cxx_std_23
-    c_std_17
 )
 
 target_compile_definitions(${PROJECT_NAME} PRIVATE
   NOMINMAX
-  RAYGUI_IMPLEMENTATION
-  # RAYGUI_STANDALONE
 
   $<$<CONFIG:Debug>:
     ROGUELIKE_DEBUG
@@ -130,6 +128,7 @@ target_link_libraries(${PROJECT_NAME}
   PRIVATE box2d::box2d
   PRIVATE flecs::flecs_static
   PRIVATE fmt::fmt
+  PRIVATE imgui::imgui
   PRIVATE glfw
   PRIVATE raylib
   PRIVATE simdjson::simdjson
