--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,17 +8,17 @@ list(APPEND CMAKE_MODULE_PATH
 include(vcpkg-init)
 
 set(CMAKE_CXX_STANDARD 23)
-#set(CMAKE_C_STANDARD 23)
+set(CMAKE_C_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS ON)
 set(EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_COLOR_DIAGNOSTICS ON)
 
 project(roguelike
-    LANGUAGES
-      C CXX
-    VERSION
-      0.0.1
+  LANGUAGES
+    C CXX
+  VERSION
+    0.0.1
 )
 
 option(
@@ -26,8 +26,6 @@ option(
     "If enabled, clang-format will be used to format all sources in src/ during configuration"
       ON
 )
-
-include(CPack)
 
 string(TOLOWER "${CMAKE_SYSTEM_NAME}" host_os)
 string(TOLOWER "${CMAKE_BUILD_TYPE}" build_type)
@@ -38,25 +36,24 @@ set(compiler_is_msvc "$<CXX_COMPILER_ID:MSVC>")
 set(compiler_is_gnu "$<CXX_COMPILER_ID:GNU>")
 set(compiler_is_clang "$<OR:$<CXX_COMPILER_ID:AppleClang>,$<CXX_COMPILER_ID:Clang>>")
 
+set(SDL_TESTS OFF)
+set(SDL_TEST_LIBRARY OFF)
 
 set(SDL_LIBC OFF)
+set(SDL_VULKAN ON)
+
 set(SDL_STATIC ON)
 set(SDL_SHARED OFF)
 set(FORCE_STATIC_VCRT OFF)
-set(SDL_VULKAN ON)
-set(SDL_TESTS ON)
-set(SDL_TEST_LIBRARY ON)
-set(SDL3IMAGE_VENDORED OFF)
 set(BUILD_SHARED_LIBS OFF)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/sdl)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/sdl_ttf)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/sdl_image)
-#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/sdl_ttf)
-#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/sdl_mixer)
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/sdl_mixer)
 
 find_package(fmt CONFIG REQUIRED)
 find_package(argparse CONFIG REQUIRED)
-#find_package(FFMPEG REQUIRED)
 find_package(flecs CONFIG REQUIRED)
 find_package(OpenGL REQUIRED COMPONENTS OpenGL)
 find_package(Vulkan REQUIRED)
@@ -107,23 +104,19 @@ target_compile_options(${PROJECT_NAME} PRIVATE
 target_include_directories(${PROJECT_NAME}
   PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src"
   PRIVATE ${OPENGL_INCLUDE_DIR}
-  # PRIVATE ${FFMPEG_INCLUDE_DIRS}
 )
 
-# target_link_directories(${PROJECT_NAME}
-#   PRIVATE ${FFMPEG_LIBRARY_DIRS}
-# )
-
 target_link_libraries(${PROJECT_NAME}
-  # PRIVATE ${FFMPEG_LIBRARIES}
+  PRIVATE OpenGL::GL
+  PRIVATE Vulkan::Vulkan
+  PRIVATE SDL3::SDL3-static
+  PRIVATE SDL3_ttf::SDL3_ttf-static
+  PRIVATE SDL3_image::SDL3_image-static
+  PRIVATE SDL3_mixer::SDL3_mixer-static
+  PRIVATE simdjson::simdjson
   PRIVATE argparse::argparse
   PRIVATE flecs::flecs_static
   PRIVATE imgui::imgui
-  PRIVATE Vulkan::Vulkan
-  PRIVATE OpenGL::GL
-  PRIVATE SDL3::SDL3
-  PRIVATE SDL3_image::SDL3_image
-  PRIVATE simdjson::simdjson
   PRIVATE fmt::fmt
 )
 
