--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,6 +99,10 @@ target_compile_options(${PROJECT_NAME} PRIVATE
     /EHsc
     /nologo
   >
+
+  $<$<CONFIG:Release>:
+    /Ox
+  >
 )
 
 target_include_directories(${PROJECT_NAME}
