swapped out windows timer with sdl impl, started adding graphics libs, added color gradient code, misc fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,7 +26,7 @@
     "cmake.cmakeCommunicationMode": "fileApi",
     "cmake.configureOnOpen": true,
     "cmake.languageSupport.enableFileAPI": true,
-    "cmake.launchBehavior": "breakAndReuseTerminal",
+    "cmake.launchBehavior": "newTerminal",
     "cmake.outputLogEncoding": "utf-8",
     "cmake.parallelJobs": 0,
     "cmake.parseBuildDiagnostics": true,
