changed constexpr variables to pseudo scoped enums

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,7 +29,6 @@
     "cmake.launchBehavior": "newTerminal",
     "cmake.outputLogEncoding": "utf-8",
     "cmake.parallelJobs": 0,
-    "cmake.parseBuildDiagnostics": true,
     "C_Cpp.default.cppStandard": "c++23",
     "cmake.useCMakePresets": "always",
     "debug.autoExpandLazyVariables": true,
@@ -41,8 +40,19 @@
     "debug.openDebug": "openOnSessionStart",
     "debug.openExplorerOnEnd": true,
     "debug.showBreakpointsInOverviewRuler": true,
-    "debug.terminal.clearBeforeReusing": true,
+    "debug.terminal.clearBeforeReusing": false,
     "debug.toolBarLocation": "docked",
+    "terminal.integrated.tabs.focusMode": "singleClick",
+    "cmake.enabledOutputParsers": [
+        "cmake",
+        "gcc",
+        "gnuld",
+        "msvc",
+        "ghs",
+        "diab"
+    ],
+    "cmake.saveBeforeBuild": true,
+    "notebook.stickyScroll.enabled": true,
     "diffEditor.experimental.showMoves": true,
     "diffEditor.experimental.useVersion2": true,
     "docsView.documentationView.updateMode": "sticky",
@@ -108,4 +118,5 @@
     "prettyxml.settings.formatOnSave": true,
     "prettyxml.settings.preserveWhiteSpacesInComment": true,
     "prettyxml.settings.addSpaceBeforeSelfClosingTag": false,
+    "output.smartScroll.enabled": false,
 }
